[package]
name = "friendly-barnacle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.28.0"
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1.14.0", features = ["full"] }
tar = "0.4.35"
base64 = "*"
futures = "*"
id_tree = "*"