[package]
name = "friendly-barnacle"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "*"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
tokio = { version = "1.14.0", features = ["full"] }
tar = "0.4.35"
base64 = "*"
futures = "*"
id_tree = "*"
async-recursion = "*"
log = "*"
env_logger = "*"
